# Money

./: .gitignore  README.md  database.py  main.py  pyproject.toml  settings.py
alembic/: env.py
alembic/versions/: 1807bc2c23d3_column_username_on_table_users_unique_.py  2024_09_06_1754-2b3181e59392_add_catalog.py  2024_09_06_1925-1fe758610e9d_add_catalog_v1.py  2024_09_08_1611-3c6d5389ef4d_add_money_for_users.py  2024_09_29_1634-9b94e96ad0d0_add_column_user_is_verification_email.py  8ac4e9a4abaf_initial_migration_create_user.py
auth/: crud.py  dao.py  database.py  dependences.py  exeptions.py  models.py  redis.py  router.py  schemas.py  utils.py
auth/mail_service/: sender_messages.py
auth/templates/: login.html
catalog/: crud.py  models.py  routers.py  schemas.py
core/: dao.py  dependencies.py  log.py
