[tool.poetry]
name = "money"
version = "0.1.0"
description = ""
authors = ["PingWinCheck <ankolt@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
pydantic = {extras = ["email"], version = "^2.8.2"}
python-multipart = "^0.0.9"
uvicorn = "^0.30.5"
jinja2 = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
